--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-<button>Press me</button>
-<div id="greeting"></div>
+<!-- <button>Press me</button>
+<div id="greeting"></div> -->
 
 <script src="javascript.js"></script>
 
