--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS-start</title>
+    <script src="javascript.js" defer></script>
 </head>
+
 <body>
-
-<!-- <button>Press me</button>
-<div id="greeting"></div> -->
-
-<script src="javascript.js"></script>
+    
+    <h1>THE TITLE OF YOUR WEBPAGE</h1>
+    <div id="container"></div>
 
 </body>
 </html>
